--- a/src/application/CreacionCuenta.fxml
+++ b/src/application/CreacionCuenta.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="601.0" styleClass="gradiente" stylesheets="@estilos.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controlador">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" styleClass="gradiente" stylesheets="@estilos.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controlador">
    <children>
-      <GridPane alignment="CENTER" layoutY="21.0" prefHeight="500.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane alignment="CENTER" layoutY="21.0" prefHeight="800.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="163.6666717529297" minWidth="10.0" prefWidth="111.66666412353516" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="288.33333587646484" minWidth="10.0" prefWidth="288.33333587646484" />
@@ -74,7 +74,7 @@
                         <Insets left="15.0" right="15.0" />
                      </VBox.margin>
                   </JFXPasswordField>
-                  <JFXButton styleClass="boton" stylesheets="@estilos.css" text="Registrar" textFill="WHITE" />
+                  <JFXButton prefHeight="31.0" prefWidth="259.0" styleClass="boton" stylesheets="@estilos.css" text="Registrar" textFill="WHITE" />
                </children>
             </VBox>
          </children>
